fix: try to fix text alignments

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,3 +1,9 @@
+.w-md-editor-text-pre,
+.w-md-editor-text-input,
+.w-md-editor-text > .w-md-editor-text-pre {
+    font-family: inherit !important;
+}
+
 body .w-md-editor-toolbar svg {
     width: 24px !important;
     height: 24px !important;
